Fix #283: Collapse old history by default. This is not the cause of the UI performance issues on mobile but it helps anyway

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -824,6 +824,16 @@
 		cursor: pointer;
 	}
 
+	#history > #today > span ~ li,
+	#history > #yesterday > span ~ li,
+	#history > #this-week > span ~ li {
+		display: list-item;
+	}
+
+	#history > ul > span ~ li {
+		display: none;
+	}
+
 	.is-admin- {
 		display:none;
 	}
